⛅🥼 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- Unit 7 Project
 Requirements
-[  ] three variables
-[  ] animation that moves position
+[ yes ] three variables
+[ yes ] animation that moves position
 [  ] animation that changes size
 [  ] three new HTML elements/CSS Declarations
 
@@ -27,7 +27,7 @@ Select ONE Additional
 
   <body>
     <h1>
-      New Year, New Me
+     Winston The Head
     </h1>
     <div class="main">
       <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
@@ -36,8 +36,14 @@ Select ONE Additional
           2025 Goals
         </h2>
         <ol>
-          <li>Spend More Time Coding </li>
+          <li> get a solo in show
+          </li>
+          <li>record a song</li>
+          <li>have an amazing year</li>
         </ol>
+        <p>
+          This year is going to be great!
+        </p>
       </div>
     </div>
         
